--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -10,7 +10,7 @@ extends: null
 
 files:
   - '!{dist,.gitignore,.vscode,docs,dev-app-update.yml,.nvmrc,.eslintrc.json}'
-  - 'main_process/**/*'
+  - 'app/**/*'
   - 'dist/**/*'
   - 'build/**/*'
   - 'node_modules/**/*'
